--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.aspectj:aspectjweaver'
 	compileOnly 'org.projectlombok:lombok'
-	compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+	//compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
 }
 
 tasks.named('test') {
