--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	implementation 'org.aspectj:aspectjweaver'
 	compileOnly 'org.projectlombok:lombok'
 	//compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'org.jfree:jfreechart:1.5.0'
 }
 
 tasks.named('test') {
